# gimnasio_sistema

./: .gitignore  README.md  accesos_ui.py  clientes_ui.py  clientes_ui_simple.py  configuracion_ui.py  crear_plantilla.py  database.py  main.py  pagos_ui.py  plantilla_clientes_gimnasio.xlsx  plantilla_clientes_minima.xlsx  pyproject.toml  reportes_ui.py  requirements.txt  test_botones.py  test_database.py  test_fixed.py  test_simple.py
config/: config.json
data/: gimnasio.db
reportes/: reporte_2025-10-19_17-49-59.xlsx
src/gimnasio/: app.py
src/gimnasio/config/: settings.py
src/gimnasio/domain/models/: access.py  client.py  payment.py
src/gimnasio/infrastructure/: database.py
src/gimnasio/infrastructure/repositories/: accesses_repo.py  clients_repo.py  payments_repo.py
src/gimnasio/services/: accesses_service.py  clients_service.py  payments_service.py  reports_service.py  settings_service.py
src/gimnasio/ui/: main_window.py
src/gimnasio/ui/components/: base_view.py  form_fields.py  styles.py  table.py
src/gimnasio/ui/views/: accesses_view.py
src/gimnasio/ui/views/clients/: clients_view.py
src/gimnasio/ui/views/payments/: payments_view.py
src/gimnasio/ui/views/reportes/: dashboard_view.py
src/gimnasio/ui/views/settings/: settings_view.py
src/gimnasio/utils/: formatters.py  validators.py
